--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,11 +10,10 @@
     ],
     "rules": {
         "@typescript-eslint/naming-convention": "warn",
-        "@typescript-eslint/semi": "warn",
+        "@typescript-eslint/semi": ["warn", "always", { "omitLastInOneLineBlock": true }],
         "curly": ["warn", "multi-or-nest"],
         "eqeqeq": "warn",
-        "no-throw-literal": "warn",
-        "semi": "off"
+        "no-throw-literal": "warn"
     },
     "ignorePatterns": [
         "out",
